--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -30,6 +30,7 @@
     <div>
         <input type="text" name="title" placeholder="Title">
         <input type="text" name="excerpt"  placeholder="Excerpt">
+        <input type="text" name="email"  placeholder="Email">
         <textarea name="content" cols="30" rows="15">
         </textarea>
         <button type="submit">Publish</button>
