--- a/src/main/resources/templates/post/show-post.html
+++ b/src/main/resources/templates/post/show-post.html
@@ -35,6 +35,6 @@
     <p th:text="${post.content}" class="post-text">
     </p>
 </section>
-<center><a th:href="@{/comment/{id}(id=${post.id})}">View Comments</a></center>
+<center><a th:href="@{/comments/{id}(id=${post.id})}">View Comments</a></center>
 </body>
 </html>
