--- a/src/main/resources/templates/post/update.html
+++ b/src/main/resources/templates/post/update.html
@@ -32,6 +32,7 @@
     <input type="text" th:field="*{title}" id="title" placeholder="title">
     <label for="excerpt">Excerpt</label>
     <input type="text" th:field="*{excerpt}" id="excerpt" placeholder="excerpt">
+    <input type="hidden" th:field="*{author}" id="author" placeholder="author">
     <label for="content">Content</label>
     <textarea th:field="*{content}" id="content" placeholder="content" cols="30" rows="15">
     </textarea>
