--- a/src/main/resources/templates/comment/show-comments.html
+++ b/src/main/resources/templates/comment/show-comments.html
@@ -10,7 +10,7 @@
         <span><b>Name</b></span><p th:text="${comment.name}"></p>
         <span><b>Email</b></span><p th:text="${comment.email}"></p>
         <span><b>Comment</b></span><p th:text="${comment.content}"></p>
-        <a th:href="@{/update-comment/{id}(id=${comment.id})/{post-id}(post-id=${post.id})}">Update Comment</a>
+        <a th:href="@{/update-comment/{id}(id=${comment.id})}">Update Comment</a>
     </div>
     <a th:href="@{/add-comment/{post-id}(post-id =${post.id})}">Add Comment</a>
 
