--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,6 +31,11 @@
         <input type="text" name="title" placeholder="Title">
         <input type="text" name="excerpt"  placeholder="Excerpt">
         <input type="text" name="email"  placeholder="Email">
+        <span>Available Tags</span>
+        <div th:each="tag : ${tags}">
+         <input type="checkbox" id="${tag.name}" name="${tag.name} value=${tag.id}">
+            <label for="${tag.name}">[[${tag.name}]]</label>
+        </div>
         <textarea name="content" cols="30" rows="15">
         </textarea>
         <button type="submit">Publish</button>
