--- a/src/main/resources/templates/comment/update-comment.html
+++ b/src/main/resources/templates/comment/update-comment.html
@@ -3,16 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        form {
+            align: center;
+        }
+        .edit {
+            padding: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 50px;
+        }
+        input, textarea {
+            width: 100%;
+            padding: 10px 10px;
+            border: solid 1px #000;
+            margin: 5px 0;
+        }
+
+
+
+
+
+    </style>
 </head>
 <body>
 <form action="#"
       th:action="@{/update-comment/{id}(id=${comment.id})}"
       th:object="${comment}"
-      method="post" class="edit-post">
+      method="post" class="edit">
     <label for="name">Name</label>
     <input type="text" th:field="*{name}" id="name" placeholder="name">
     <label for="email">Email</label>
     <input type="text" th:field="*{email}" id="email" placeholder="email">
+    <input type="hidden" th:field="*{post}">
     <label for="content">Comment</label>
     <textarea th:field="*{content}" id="content" placeholder="comment" cols="30" rows="15">
     </textarea>
