--- a/src/main/resources/templates/post/edit.html
+++ b/src/main/resources/templates/post/edit.html
@@ -33,7 +33,7 @@
         <input type="text" name="email"  placeholder="Email">
         <span>Available Tags</span>
         <div th:each="tag : ${tags}">
-         <input type="checkbox" id="${tag.name}" name="${tag.name} value=${tag.id}">
+         <input type="checkbox" id="${tag.name}" name="tags" th:value="${tag.id}">
             <label for="${tag.name}">[[${tag.name}]]</label>
         </div>
         <textarea name="content" cols="30" rows="15">
