--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,8 +35,12 @@
         <form action="">
             <label>Filter</label>
             <select id="filter" name="searchText">
-                <option value="mvc">Spring mvc</option>
-                <option value="boot">Spring boot</option>
+                <option value="spring">Spring</option>
+                <option value="Technology">Technology</option>
+                <option value="neeraj">Neeraj</option>
+                <option value="technology">Technology</option>
+                <option value="neeraj">Neeraj</option>
+                <option value="2020-12-22">PublishedDate : 2020-12-22</option>
             </select>
             <input type="submit">
         </form>
