Refactored Source Code

--- a/src/main/resources/templates/filter/index.html
+++ b/src/main/resources/templates/filter/index.html
@@ -1,16 +1,84 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Express-Pen down your thoughts.</title>
+    <style>
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+            margin: 2em 0;
+        }
+
+        .main {
+            display: grid;
+            grid-template-columns: 50% 50%;
+            gap: 1em 1.1em;
+            margin-top: 1em;
+        }
+
+        .main > div {
+            border: solid 1px #000;
+            padding: .6em;
+        }
+
+    </style>
+
+
 </head>
+
 <body>
+<div class="header">
+    <div>
+        <h4>My Blog Application</h4> Hi there
+        <div>
+            <form action="" >
+                <input type="hidden" name="searchText" th:value="${searchText}">
+                <input type="checkbox" id="Samir" name="authorId" value="4">
+                <label for="Samir">Samir</label>
+                <input type="checkbox" id="neeraj" name="authorId" value="10">
+                <label for="neeraj">Nee</label>
+                <br>
+                <input type="checkbox" id="fiction" name="tagId" value="2">
+                <label for="fiction">Fiction</label>
+                <input type="checkbox" id="technology" name="tagId" value="1">
+                <label for="technology">Technology</label>
+                <input type="checkbox" id="spring" name="tagId" value="4">
+                <label for="spring">Spring</label>
+                <input type="checkbox" id="food" name="tagId" value="7">
+                <label for="food">Food</label>
+                <input type="checkbox" id="travel" name="tagId" value="6">
+                <label for="travel">Travel</label>
+                <button type="submit">Filter</button>
+            </form>
+            <form action="">
+                <span>Sort By Date</span><br>
+                <input type="hidden" name="sortedField" value="publishedAt">
+                <input type="radio" id="asc" name="sort" value="asc">
+                <label for="asc">Ascending</label><br>
+                <input type="radio" id="desc" name="sort" value="desc">
+                <label for="desc">Descending</label><br>
+                <button type="submit">Sort</button>
+            </form>
+            <form action="search">
+                <input type="text" name="searchText" placeholder="looking for something">
+                <button type="submit">Run Search</button>
+            </form>
+            <a href="login">Login</a>
+            <a href="new-post">New Post</a>
+        </div>
+    </div>
+</div>
 <div class="main">
     <div th:each="post : ${posts}" class="blog">
-        <span><b>Title</b></span><p th:text="${post.title}"></p>
-        <span><b>Excerpt</b></span><p th:text="${post.excerpt}"></p>
-        <span><b>Author</b></span><p th:text="${post.author.name}"></p>
-        <span><b>Published At</b></span><p th:text="${post.publishedAt}"></p>
+        <span><b>Title</b></span>
+        <p th:text="${post.title}"></p>
+        <span><b>Excerpt</b></span>
+        <p th:text="${post.excerpt}"></p>
+        <span><b>Author</b></span>
+        <p th:text="${post.author.name}"></p>
+        <span><b>Published At</b></span>
+        <p th:text="${#temporals.format(post.publishedAt,'dd/MM/yyyy HH:mm:ss')}"></p>
         <span><b>Tags</b></span>
         <div th:each="postTag : ${post.postTags}">
             <p th:text="${postTag.tag.name}"></p>
@@ -21,6 +89,11 @@
             <a th:href="@{update/{id}(id =${post.id})}">Update Post</a>
         </div>
     </div>
+</div>
+<!--
+<div th:each="page : ${#numbers.sequence(1,pages)}">
+    <a th:text="${page}" th:href="@{'/?start='+${page - 1}+'&limit=10'}"></a>
+-->
 </div>
 </body>
 </html>
