--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
     <div>
         <h4>My Blog Application</h4> Hi there
         <div>
-            <form action="filter">
+            <form action="filter" >
                 <input type="checkbox" id="Samir" name="authorId" value="4">
                 <label for="Samir">Samir</label>
                 <input type="checkbox" id="neeraj" name="authorId" value="10">
@@ -59,13 +59,10 @@
                 <label for="desc">Descending</label><br>
                 <button type="submit">Sort</button>
             </form>
-            <form action="">
+            <form action="search">
                 <input type="text" name="searchText" placeholder="looking for something">
                 <button type="submit">Run Search</button>
             </form>
-
-
-
             <a href="login">Login</a>
             <a href="new-post">New Post</a>
         </div>
